<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="ask_support">Написать в техподдержку</string>
    <string name="agreement">Пользовательское соглашение</string>

    <string name="share_link">Курс «Android-разработчик» - онлайн-обучение разработке мобильных приложений под Андроид https://practicum.yandex.ru/android-developer/</string>

    <string name="support_email">anannat@ya.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/</string>

    <string name="no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="not_found">Ничего не нашлось</string>

    <string name="reload">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_header">Вы искали</string>
    <string name="play_or_pause">Play or Pause</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorities">Добавить в избранное</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="playback_control_time">00:00</string>


    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_tracks">Ваша медиатека пуста</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>

    <string name="finish_creating">Завершить создание плейлиста?</string>
    <string name="info_erase_input">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>

    <string name="share_playlist">Поделиться плейлистом</string>
    <string name="menu">Меню</string>
    <string name="remove_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>

    <string name="confirm_delete_playlist">Хотите удалить плейлист «%1$s»?</string>
    <string name="edit">Редактировать</string>
    <string name="msg_no_tracks">В этом плейлисте нет треков</string>


</resources>