<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:title="@string/settings"
        app:titleMarginStart="@dimen/horizontal_padding"
        app:titleTextAppearance="@style/ToolbarTitleStyle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/SettingsSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/text_med"
        android:paddingVertical="20dp"
        android:text="@string/dark_theme"
        android:textSize="@dimen/text_med" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/text_med"
        android:paddingVertical="20dp"
        android:text="@string/share_app"
        android:textSize="@dimen/text_med" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_support_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/text_med"
        android:paddingVertical="20dp"
        android:text="@string/ask_support"
        android:textSize="@dimen/text_med" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/settings_agreement_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrow_forward"
        android:paddingHorizontal="@dimen/text_med"
        android:paddingVertical="20dp"
        android:text="@string/agreement"
        android:textSize="@dimen/text_med" />

</LinearLayout>