<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/settings_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical"

        android:text="@string/settings"

        android:textColor="@color/black"
        android:textSize="@dimen/text_large"
        android:fontFamily="@font/ys_text_medium"

        app:drawableStartCompat="@drawable/btn_back"
        android:drawablePadding="@dimen/icon_padding"
        app:drawableTint="@color/black" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingsItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/dark_theme"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"/>
    </FrameLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingsItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/share_app"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            app:tint="@color/light_grey"
            android:layout_gravity="end"
            tools:ignore="ContentDescription" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingsItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/ask_support"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/support"
            app:tint="@color/light_grey"
            android:layout_gravity="end"
            tools:ignore="ContentDescription"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/SettingsItem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SettingsText"
            android:text="@string/agreement"
            android:layout_gravity="center_vertical"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_forward"
            android:layout_gravity="end"
            app:tint="@color/light_grey"
            tools:ignore="ContentDescription"/>
    </FrameLayout>
</LinearLayout>