<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/search"
        app:titleTextAppearance="@style/ToolbarTitleStyle"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:titleMarginStart="8dp"/>

    <FrameLayout
        android:layout_marginHorizontal="@dimen/horizontal_padding"
        android:layout_marginVertical="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_input_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:background="@drawable/bg_rounded_radius_m"
            android:backgroundTintMode="screen"
            android:textCursorDrawable="@drawable/bg_cursor"

            android:hint="@string/search"
            style="@style/SettingsTextStyle"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:imeOptions="actionDone"

            android:paddingHorizontal="@dimen/icon_padding"
            android:drawableStart="@drawable/search_m"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/android:textColorHint"
            />

        <ImageView
            android:id="@+id/search_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/clear"
            android:layout_gravity="center_vertical|end"
            android:paddingEnd="14dp"
            android:visibility="gone"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/history_header"
            style="@style/PlaceHolderTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:text="@string/history_header"
            android:visibility="gone"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/search_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/horizontal_padding"
                tools:listitem="@layout/item_track"
                tools:itemCount="2"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/placeholderMessage"
                style="@style/PlaceHolderTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:textAlignment="center"
                android:layout_marginTop="102dp"
                app:drawableTopCompat="@drawable/no_internet"
                android:text="@string/no_internet"
                android:visibility="gone"
                tools:ignore="RtlCompat" />

            <Button
                android:id="@+id/search_reload_button"
                style="@style/UsualButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:paddingVertical="0dp"
                android:text="@string/reload"
                android:visibility="gone"/>
        </FrameLayout>

        <Button
            android:id="@+id/clear_history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/UsualButtonsStyle"
            android:layout_gravity="center"
            android:layout_margin="@dimen/text_padding"
            android:text="@string/clear_history"
            android:visibility="gone"/>

    </LinearLayout>

</LinearLayout>