<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.player.PlayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/playlist_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/arrow_back"
        app:title="@string/new_playlist"
        app:titleMarginStart="@dimen/horizontal_padding"
        app:titleTextAppearance="@style/ToolbarTitleStyle" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/border_width" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/border_width" />

    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="62dp"
        android:importantForAccessibility="no"
        android:src="@drawable/playlist_image_picker"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="@id/rightBorder"
        app:layout_constraintStart_toStartOf="@id/leftBorder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playlist_title"
        style="@style/SettingsTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_stroke_rounded"
        android:gravity="center|left"
        android:hint="@string/title"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="18dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        app:layout_constraintStart_toStartOf="@+id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@+id/playlist_image" />

    <TextView
        android:id="@+id/playlist_description"
        style="@style/SettingsTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_stroke_rounded"
        android:gravity="center|left"
        android:hint="@string/description"
        android:paddingHorizontal="@dimen/horizontal_padding"
        android:paddingVertical="18dp"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        app:layout_constraintStart_toStartOf="@+id/leftBorder2"
        app:layout_constraintTop_toBottomOf="@+id/playlist_title" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_rounded_radius_m"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightBorder2"
        app:layout_constraintStart_toStartOf="@id/leftBorder2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/horizontal_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/horizontal_padding" />


</androidx.constraintlayout.widget.ConstraintLayout>
